--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,10 @@
     <string name="listitem_imagedescription">An image of the listed dish</string>
     <string name="login_facebook">Log in with facebook</string>
     <string name="login_googleplus">Log in with google+</string>
+    <string name="rate">Rate</string>
+    <string name="dish_presentationrate">Presentation</string>
+    <string name="dish_ingredientstitle">Ingredients</string>
+    <string name="dish_qualityprice">Quality/Price</string>
 
 
 </resources>
